# poetry-torch

./: LICENSE  README.md  pyproject.toml
scripts/: install_torch.py
